--- a/OrbitHomeCinema.Crawling/OrbitHomeCinema.Crawling.csproj
+++ b/OrbitHomeCinema.Crawling/OrbitHomeCinema.Crawling.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" />
+    <PackageReference Include="HtmlAgilityPack.CssSelectors" />
+  </ItemGroup>
+
 </Project>
