--- a/OrbitHomeCinema.RestApi/appsettings.Development.json
+++ b/OrbitHomeCinema.RestApi/appsettings.Development.json
@@ -3,6 +3,11 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    }
+    },
+    "ConnectionStrings": [
+      {
+        "HomeCinemaDb": "Server=DESKTOP-O7ENS5H;Initial Catalog=HomeCinemaDb;User=SA;Password=asdqwe123;Trusted_Connection=True"
+      }
+    ]
   }
 }
