--- a/OrbitHomeCinema.RestApi/appsettings.json
+++ b/OrbitHomeCinema.RestApi/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": [
+    {
+      "HomeCinemaDb": "Server=DESKTOP-O7ENS5H;Initial Catalog=HomeCinemaDb;User=SA;Password=asdqwe123;Trusted_Connection=True"
+    }
+  ]
 }
