--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -14,10 +14,16 @@
     <PackageVersion Include="Avalonia.iOS" Version="11.2.1" />
     <PackageVersion Include="Avalonia.Browser" Version="11.2.1" />
     <PackageVersion Include="Avalonia.Android" Version="11.2.1" />
-    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.3.2" />
+    <PackageVersion Include="Avalonia.ReactiveUI" Version="11.2.1" />
+    <PackageVersion Include="HtmlAgilityPack" Version="1.11.74" />
+    <PackageVersion Include="HtmlAgilityPack.CssSelectors" Version="1.0.2" />
     <PackageVersion Include="LibVLCSharp.Avalonia" Version="3.9.1" />
     <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="7.2.0" />
     <PackageVersion Include="Xamarin.AndroidX.Core.SplashScreen" Version="1.0.1.1" />
+    <PackageVersion Include="VideoLAN.LibVLC.Windows" Version="3.0.11" />
+    <PackageVersion Include="VideoLAN.LibVLC.Mac" Version="3.1.3.1" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
   </ItemGroup>
 </Project>
