--- a/OrbitHomeCinema.Browser/OrbitHomeCinema.Browser.csproj
+++ b/OrbitHomeCinema.Browser/OrbitHomeCinema.Browser.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia.Browser" />
+	<PackageReference Include="Avalonia.ReactiveUI" />
+
   </ItemGroup>
 
   <ItemGroup>
