--- a/OrbitHomeCinema.RestApi/OrbitHomeCinema.RestApi.csproj
+++ b/OrbitHomeCinema.RestApi/OrbitHomeCinema.RestApi.csproj
@@ -1,29 +1,30 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>c27e2c76-d4bf-4f62-97e8-680242a05247</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<UserSecretsId>c27e2c76-d4bf-4f62-97e8-680242a05247</UserSecretsId>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
-    <PackageReference Include="Swashbuckle.AspNetCore" VersionOverride="6.4.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="AutoMapper" Version="13.0.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.6">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\OrbitHomeCinema.Core\OrbitHomeCinema.Core.csproj" />
-    <ProjectReference Include="..\OrbitHomeCinema.Crawling\OrbitHomeCinema.Crawling.csproj" />
-    <ProjectReference Include="..\OrbitHomeCinema.Data\OrbitHomeCinema.Data.csproj" />
-    <ProjectReference Include="..\OrbitHomeCinema.Downloaders\OrbitHomeCinema.Downloaders.csproj" />
-    <ProjectReference Include="..\OrbitHomeCinema.Media\OrbitHomeCinema.Media.csproj" />
-    <ProjectReference Include="..\OrbitHomeCinema.Schadulers\OrbitHomeCinema.Schadulers.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\OrbitHomeCinema.Core\OrbitHomeCinema.Core.csproj" />
+		<ProjectReference Include="..\OrbitHomeCinema.Crawling\OrbitHomeCinema.Crawling.csproj" />
+		<ProjectReference Include="..\OrbitHomeCinema.Data\OrbitHomeCinema.Data.csproj" />
+		<ProjectReference Include="..\OrbitHomeCinema.Downloaders\OrbitHomeCinema.Downloaders.csproj" />
+		<ProjectReference Include="..\OrbitHomeCinema.Media\OrbitHomeCinema.Media.csproj" />
+		<ProjectReference Include="..\OrbitHomeCinema.Schadulers\OrbitHomeCinema.Schadulers.csproj" />
+	</ItemGroup>
 
 </Project>
