--- a/OrbitHomeCinema/OrbitHomeCinema.csproj
+++ b/OrbitHomeCinema/OrbitHomeCinema.csproj
@@ -19,11 +19,12 @@
       <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="CommunityToolkit.Mvvm" />
+    <PackageReference Include="Avalonia.ReactiveUI" />
     <PackageReference Include="LibVLCSharp.Avalonia" />
   </ItemGroup>
+
     <ItemGroup>
-		<PackageReference Condition="$([MSBuild]::IsOsPlatform('Windows'))" Include="VideoLAN.LibVLC.Windows" Version="3.0.11" />
-		<PackageReference Condition="$([MSBuild]::IsOsPlatform('OSX'))" Include="VideoLAN.LibVLC.Mac" Version="3.1.3.1" />
+		<PackageReference Condition="$([MSBuild]::IsOsPlatform('Windows'))" Include="VideoLAN.LibVLC.Windows" />
+		<PackageReference Condition="$([MSBuild]::IsOsPlatform('OSX'))" Include="VideoLAN.LibVLC.Mac" />
 	</ItemGroup>
 </Project>
